[fix] takes out z-index

--- a/client/styles.css
+++ b/client/styles.css
@@ -529,7 +529,6 @@ strong {
   height: 500px;
   width: 100%;
   margin: 0;
-  z-index: -1;
 }
 
 .user-profile-block-right {
